--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
     <string name="enter_shopping_list_name">Enter shopping list name</string>
+    <string name="enter_item_name">Enter item name</string>
     <string name="creation_date">created %s</string>
     <string name="archived_lists">Archived shopping lists</string>
     <string name="active_lists">Shopping lists</string>
